Sun Mar 12 20:23:05 MST 2006  Jeremy Nickurak <atrus@rifetech.com>

	* src/fe-gnome/preferences.c:
	  - Stop trying to find a palette scheme, fix palette loading bug.
	    (#327711)

Sun Mar 12 18:48:43 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* plugins/notification/notification.c:
	* plugins/notification/notification.schemas.in:
	  - Add the /apps/xchat/plugins/notification/level gconf key
	    to configure the notification level. (#334238)
	  - Remove the /apps/xchat/plugins/notification/persistant gconf
	    key because we don't need it anymore with the new key.
	  - Fix a leak by freeing the GConfClient.
	  - Remove add_channels_foreach_cb () because this function
	    is called nowhere.
	  - Add a test to avoid to display the notification icon at
	    launching if not desired.

Fri Mar 10 17:20:52 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	  - Put main menus on an icon diet.

Thu Mar  9 15:52:14 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/xtext.c:
	* src/fe-gnome/main-window.c:
	  - Use the proper clipboards

Wed Mar  8 20:44:50 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* data/irc-network-editor.glade:
	  - Make the servers list view reorderable, to allow users to change
	    the the priority order.

Wed Mar  8 14:52:12 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences.c:
	* src/fe-gnome/fe-gnome.c:
	  - Fill in extra nickname fields in the common prefs structure, so
	    that the fallbacks are predictable (#333659)

Wed Mar  8 14:26:51 MST 2006  Christian Persch <chpe@gnome.org>

	* src/fe-gnome/preferences-page-dcc.c:
	* src/fe-gnome/main-window.c:
	* src/fe-gnome/preferences-dialog.c:
	* src/fe-gnome/preferences-dialog.h:
	* src/fe-gnome/preferences-page-irc.c:
	* src/fe-gnome/gui.h:
	* src/fe-gnome/preferences-page-colors.c:
	* src/fe-gnome/preferences-page-colors.h:
	* data/preferences-dialog.glade: